Updates for site.

--- a/pic.html
+++ b/pic.html
@@ -7,37 +7,140 @@
             <link rel="stylesheet" type="text/css" href="./css/ahf.css">
         </HEAD>
         <body>
-                <div class="nav-bar">
-                        <A HREF="index.html">Home</A> -- <A HREF="bio.html">Band</A> -- <A HREF="show.html">Upcoming Shows</A> -- <A HREF="lyric.html">Lyrics</A> -- <A href="new.html">News</a> -- <A HREF="sound.html">Downloads</A> -- <A HREF="booking.html">Contact Info</A>
+                        <div class="notice">Notice: You have traveled back in time to the year 2001...be careful interacting with the past can be dangerous!</div>
+                        <div class="reminder">Once you're done living in the past, <a href="currentday.html">click here</a> to take a look at what this place looks like now.</div>
+                        <div class="nav-bar">
+                                        <A HREF="index.html">Home</A>  - <A HREF="bio.html">Band</A>  -  <A HREF="new.html">News</A> - <A HREF="pic.html">Pics</A> - <A HREF="show.html">Shows</A>  -  <A HREF="lyric.html">Lyrics</A>
+                        </div>
+                        <br/>
+                        <div class="content-section">
+                        <h1>PICS</h1>
+                        <div style="height: 500px;">
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/rob3.jpg">
+                                                <img src="./images/rob3.jpg" alt="rob @ the upper room">
+                                        </a>
+                                        <div class="desc">rob @ the upper room</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/rob4.jpg">
+                                                <img src="./images/rob4.jpg" alt="rob @ Jesus Fest">
+                                        </a>
+                                        <div class="desc">rob @ Jesus Fest in May</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/rob7.jpg">
+                                                <img src="./images/rob7.jpg" alt="rob @ Jesus Fest">
+                                        </a>
+                                        <div class="desc">rob @ Jesus Fest</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/rob6.jpg">
+                                                <img src="./images/rob6.jpg" alt="rob @ WolfRock">
+                                        </a>
+                                        <div class="desc">rob @ WolfRock</div>
+                                </div>
+                        </div>
+                        <div style="height: 450;">
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/dan2.jpg">
+                                                <img src="./images/dan2.jpg" alt="dan @ the upper room">
+                                        </a>
+                                        <div class="desc">dan @ the upper room</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/dan5.jpg">
+                                                <img src="./images/dan5.jpg" alt="dan gettin' ready to jump">
+                                        </a>
+                                        <div class="desc">dan gettin' ready to jump</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/dan7.jpg">
+                                                <img src="./images/dan7.jpg" alt="dan @ Jesus Fest">
+                                        </a>
+                                        <div class="desc">dan @ Jesus Fest</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/dan4.jpg">
+                                                <img src="./images/dan4.jpg" alt="dan @ king's cafe">
+                                        </a>
+                                        <div class="desc">dan @ king's cafe</div>
+                                </div>
+                        </div>
+                        <div style="height: 350px;">
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/trey2.jpg">
+                                                <img src="./images/trey2.jpg" alt="trey @ the upper room">
+                                        </a>
+                                        <div class="desc">trey @ the upper room</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/trey3.jpg">
+                                                <img src="./images/trey3.jpg" alt="trey @ Jesus Fest">
+                                        </a>
+                                        <div class="desc">trey @ Jesus Fest</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/trey4.jpg">
+                                                <img src="./images/trey4.jpg" alt="trey @ king's cafe">
+                                        </a>
+                                        <div class="desc">trey @ king's cafe</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/kc1.jpg">
+                                                <img src="./images/kc1.jpg" alt="king's cafe">
+                                        </a>
+                                        <div class="desc">king's cafe</div>
+                                </div>
+                        </div>
+                        <div style="height: 350px;">
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/newlife1.jpg">
+                                                <img src="./images/newlife1.jpg" alt="the crowd getting into it @ Jesus Fest">
+                                        </a>
+                                        <div class="desc">the crowd getting into it @ Jesus Fest</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/group1.jpg">
+                                                <img src="./images/group1.jpg" alt="East Lincoln Youth Rally">
+                                        </a>
+                                        <div class="desc">East Lincoln Youth Rally</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/jfmay.jpg">
+                                                <img src="./images/jfmay.jpg" alt="Jesus Fest">
+                                        </a>
+                                        <div class="desc">Jesus Fest</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/wolfgroup.jpg">
+                                                <img src="./images/wolfgroup.jpg" alt="WolfRock">
+                                        </a>
+                                        <div class="desc">WolfRock</div>
+                                </div>
+                        </div>
+                        <div style="height: 250px;">
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/kc2.jpg">
+                                                <img src="./images/kc2.jpg" alt="king's cafe">
+                                        </a>
+                                        <div class="desc">king's cafe</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/before.jpg">
+                                                <img src="./images/before.jpg" alt="Upper Room">
+                                        </a>
+                                        <div class="desc">Upper Room</div>
+                                </div>
+                                <div class="gallery">
+                                        <a target="_blank" href="./images/pocahf.jpg">
+                                                <img src="./images/pocahf.jpg" alt="POC + AHF">
+                                        </a>
+                                        <div class="desc">POC + AHF</div>
+                                </div>
+                        </div>
                 </div>
                 <br/>
-                <div class="content-section">
-<center><b><u><font face="Celebrity"><font size=+4>Pic Page</font></font></u></b>
-<br>
-<p><b><font face="Times New Roman,Times"><font size=+1>Rob</font></font></b>
-<br><a href="rob3.html">the upperroom</a>
-<br><a href="rob4.html">Jesus Fest in May</a>
-<br><a href="rob7.html">Jesus Fest again</a>
-<br><a href="rob6.html">WolfRock</a>
-<p><b><font face="Times New Roman,Times"><font size=+1>Daniel</font></font></b>
-<br><a href="dan2.html">the upperroom</a>
-<br><a href="dan5.html">gettin' ready to jump</a>
-<br><a href="dan7.html">Jesus Fest in May</a>
-<br><a href="dan4.html">King's Cafe</a>
-<p><b><font face="Times New Roman,Times"><font size=+1>Trey</font></font></b>
-<br><a href="trey2.html">the upperroom</a>
-<br><a href="trey3.html">Jesus Fest in May</a>
-<br><a href="trey4.html">King's Cafe</a>
-<p><b><font size=+1>Shows</font></b>
-<br><a href="newlife1.html">the crowd getting into it at Jesus Fest</a>
-<br><a href="group1.html">East Lincoln Youth Rally</a>
-<br><a href="jfmay1.html">Jesus Fest in May</a>
-<br><a href="wolfgroup.html">WolfRock</a>
-<br><a href="kc1.html">King's Cafe</a>
-<br><a href="kc2.html">Playing at the King's Cafe</a>
-<p><b><font size=+1>Misc.</font></b>
-<br><a href="before.html">Rob and Dan before a show at the upperroom</a>
-<br><a href="pocahf.html">Hanging out with POC</a>
-</div>
+                <div class="footer">A retro project by <a href="https://robwalters.net">RobWalters.net</a></div>
 </body>
 </html>
