--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="./css/ahf.css">
 </HEAD>
 <body>
+    <div class="notice">Notice: You have traveled back in time to the year 2001...be careful interacting with the past can be dangerous!</div>
+    <div class="reminder">Once you're done living in the past, <a href="currentday.html">click here</a> to take a look at what this place looks like now.</div>
     <br/>
     <div>
         <IMG SRC="./images/logo.gif" style="border: 0px solid black;">
@@ -24,20 +26,10 @@
         <IMG SRC="./images/group.jpg" style="height: 375px;width:500px;border:2px solid white;">
     </div>
     <br/>
-    <table>
-        <tr>
-            <td>
-                <A HREF="bio.html">Band Members</A>  -  <A HREF="sound.html">Downloads</A>  -  <A HREF="pic.html">Pics</A>
-            </td>
-        </tr>
-            <td>
-                <A HREF="new.html">News</A>  -  <A HREF="show.html">Upcoming Shows</A>  -  <A HREF="lyric.html">Lyrics</A>
-            </td>
-        </tr>
-            <td>
-                <A HREF="booking.html">Booking Info</A>  -  <A HREF="link.html">Links</A>
-            </td>
-        </tr>
-    </table>
+    <div class="nav-bar">
+            <A HREF="bio.html">Band</A>  -  <A HREF="new.html">News</A> - <A HREF="pic.html">Pics</A> - <A HREF="show.html">Shows</A>  -  <A HREF="lyric.html">Lyrics</A>
+    </div>
+    <br/>
+    <div class="footer">A retro project by <a href="https://robwalters.net">RobWalters.net</a></div>
 </body>
 </HTML>
