--- a/new.html
+++ b/new.html
@@ -7,8 +7,10 @@
             <link rel="stylesheet" type="text/css" href="./css/ahf.css">
         </HEAD>
         <body>
+                <div class="notice">Notice: You have traveled back in time to the year 2001...be careful interacting with the past can be dangerous!</div>
+                <div class="reminder">Once you're done living in the past, <a href="currentday.html">click here</a> to take a look at what this place looks like now.</div>
                 <div class="nav-bar">
-                        <A HREF="index.html">Home</A> -- <A HREF="bio.html">Band</A> -- <A HREF="show.html">Upcoming Shows</A> -- <A HREF="lyric.html">Lyrics</A> -- <A href="new.html">News</a> -- <A HREF="sound.html">Downloads</A> -- <A HREF="booking.html">Contact Info</A>
+                                <A HREF="index.html">Home</A>  - <A HREF="bio.html">Band</A>  -  <A HREF="new.html">News</A> - <A HREF="pic.html">Pics</A> - <A HREF="show.html">Shows</A>  -  <A HREF="lyric.html">Lyrics</A>
                 </div>
                 <br/>
                 <div class="content-section">
@@ -21,5 +23,7 @@
                         <p>*Please sign the guestbook on the main page.  I would like to get to know the people who come to our site.</p>
 
                 </div>
+                <br/>
+                <div class="footer">A retro project by <a href="https://robwalters.net">RobWalters.net</a></div>
         </body>
 </HTML>
