--- a/show.html
+++ b/show.html
@@ -7,13 +7,17 @@
         <link rel="stylesheet" type="text/css" href="./css/ahf.css">
     </HEAD>
     <body>
-        <div class="nav-bar">
-                <A HREF="index.html">Home</A> -- <A HREF="bio.html">Band</A> -- <A HREF="show.html">Upcoming Shows</A> -- <A HREF="lyric.html">Lyrics</A> -- <A href="new.html">News</a> -- <A HREF="sound.html">Downloads</A> -- <A HREF="booking.html">Contact Info</A>
-        </div>
-        <br/>
-        <div class="content-section">
-            Dec 7 - The Upperroom (Statesville) /w No Cash Value
-        </div>
+            <div class="notice">Notice: You have traveled back through time to the year 2001...be careful interacting with the past can be dangerous!</div>
+            <div class="reminder">Once you're done living in the past, <a href="currentday.html">click here</a> to take a look at what this place looks like now.</div>
+            <div class="nav-bar">
+                    <A HREF="index.html">Home</A>  - <A HREF="bio.html">Band</A>  -  <A HREF="new.html">News</A> - <A HREF="pic.html">Pics</A> - <A HREF="show.html">Shows</A>  -  <A HREF="lyric.html">Lyrics</A>
+            </div>
+            <br/>
+            <div class="content-section">
+                Dec 7, 2001- The Upperroom (Statesville) /w No Cash Value
+            </div>
+            <br/>
+            <div class="footer">A retro project by <a href="https://robwalters.net">RobWalters.net</a></div>        
     </body>
 </HTML>
 
